--- a/.github/workflows/unas-sync.yml
+++ b/.github/workflows/unas-sync.yml
@@ -2,8 +2,8 @@ name: UNAS Sync
 
 on:
   schedule:
-    - cron: '0 * * * *'
-  workflow_dispatch:
+    - cron: '0 * * * *'   # óránként fut
+  workflow_dispatch:       # manuálisan is indítható
 
 jobs:
   build:
@@ -25,4 +25,4 @@ jobs:
         run: dotnet build AUTOLIFE/AUTOLIFE.csproj --configuration Release --no-restore
 
       - name: Run UNAS sync
-        run: dotnet run --configuration Release --project AUTOLIFE/AUTOLIFE.csproj
+        run: dotnet run --configuration Release --no-build --project AUTOLIFE/AUTOLIFE.csproj
