Add debug step to list files for GitHub Actions

--- a/.github/workflows/unas-sync.yml
+++ b/.github/workflows/unas-sync.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Debug - list files
         run: ls -R
 
+      - name: Debug - list files
+        run: ls -R
+
       - name: Restore dependencies
         run: dotnet restore AUTOLIFE/AUTOLIFE.csproj
 
