Fix csproj path in workflow (use AUTOLIFE.csproj at repo root)

--- a/.github/workflows/unas-sync.yml
+++ b/.github/workflows/unas-sync.yml
@@ -24,10 +24,10 @@ jobs:
         run: ls -R
 
       - name: Restore dependencies
-        run: dotnet restore AUTOLIFE/AUTOLIFE.csproj
+        run: dotnet restore AUTOLIFE.csproj
 
       - name: Build
-        run: dotnet build AUTOLIFE/AUTOLIFE.csproj --configuration Release --no-restore
+        run: dotnet build AUTOLIFE.csproj --configuration Release --no-restore
 
       - name: Run UNAS sync
-        run: dotnet run --configuration Release --no-build --project AUTOLIFE/AUTOLIFE.csproj
+        run: dotnet run --configuration Release --no-build --project AUTOLIFE.csproj
